CSS fix for the vertical alignment of node labels – they were positioned too high on Chrome Mobile.

--- a/FSM/Source/fsm.css
+++ b/FSM/Source/fsm.css
@@ -211,7 +211,7 @@ circle.node {
 text.nodename {
   text-anchor: middle;
   font-family: "Ek Mukta", sans-serif;
-  dominant-baseline: central;
+  dominant-baseline: middle;
   alignment-baseline: central;
   cursor: pointer;
 }
